--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,22 +13,19 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: portfolio/project
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
           node-version: '20'
           cache: 'npm'
-          cache-dependency-path: 'portfolio/project/package-lock.json'
+          cache-dependency-path: 'package-lock.json'
       - run: npm ci
       - run: npm run build
       - run: cp dist/index.html dist/404.html
       - uses: actions/upload-pages-artifact@v3
         with:
-          path: 'portfolio/project/dist'
+          path: 'dist'
 
   deploy:
     environment:
